--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,4 +1,4 @@
-name: "CI/CD: Node Module"
+name: "CI/CD: Python Module"
 
 on:
   push:
@@ -7,38 +7,38 @@ on:
   pull_request:
   workflow_dispatch:
 
-# Release Please needs permissions to write commits and open PRs.
 permissions:
   contents: write
   pull-requests: write
 
 env:
-  NODE_LTS_VERSION: 22.x
+  PYTHON_VERSION: "3.10"
 
 jobs:
   validate:
     name: Validate
     defaults:
       run:
-        working-directory: ./modules/node
+        working-directory: ./modules/python
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          node-version: ${{ env.NODE_LTS_VERSION }}
-          registry-url: 'https://registry.npmjs.org'
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install Dependencies
-        run: npm install
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
 
-      - name: Lint
+      - name: Lint Code
         run: make lint
 
-      - name: Build
+      - name: Build Package
         run: make build
 
       - name: Test with Coverage
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: ./modules/node/artifacts/
+          path: ./artifacts/
 
   upload-coverage:
     name: Upload Coverage
@@ -56,9 +56,9 @@ jobs:
     runs-on: ubuntu-24.04
     defaults:
       run:
-        working-directory: ./modules/node
+        working-directory: ./modules/python
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Download Build Artifacts
@@ -67,8 +67,9 @@ jobs:
           name: build-artifacts
           path: ./artifacts
 
-      - name: Upload Coverage
-        uses: codecov/codecov-action@v5
-        with:
-          directory: ./artifacts/coverage
-          token: ${{ secrets.CODECOV_TOKEN }}
+      # # Upload the first coverage report
+      # - name: Upload Coverage Report 1
+      #   uses: codecov/codecov-action@v5
+      #   with:
+      #     directory: ./artifacts/coverage/report1
+      #     token: ${{ secrets.CODECOV_TOKEN }}
