--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -31,9 +31,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+        run: make init
 
       - name: Lint Code
         run: make lint
@@ -68,8 +66,9 @@ jobs:
           path: ./artifacts
 
       # # Upload the first coverage report
-      # - name: Upload Coverage Report 1
-      #   uses: codecov/codecov-action@v5
-      #   with:
-      #     directory: ./artifacts/coverage/report1
-      #     token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload Coverage Report
+        uses: codecov/codecov-action@v5
+        with:
+          directory: ./artifacts/coverage
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: python
