--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
+          # Note that GH doesn't respect 'working-directory' here...
           path: ./modules/node/artifacts/
 
   upload-coverage:
