--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -14,6 +14,11 @@
           "type": "json",
           "path": "modules/node/package.json",
           "jsonpath": "$.version"
+        },
+        {
+          "type": "toml",
+          "path": "modules/python/pyproject.toml",
+          "jsonpath": "project.version"
         }
       ],
      "changelog-path": "CHANGELOG.md"
