--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,6 +10,10 @@ permissions:
   contents: write
   pull-requests: write
 
+env:
+  PYTHON_VERSION: 3.10
+  NODE_LTS_VERSION: 22.x
+
 jobs:
   validate:
     runs-on: ubuntu-24.04
@@ -17,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
       - name: Lint YAML
         run: |
@@ -77,6 +81,42 @@ jobs:
         run: |
           npm set //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
           npm publish --registry https://npm.pkg.github.com
+
+  release-python:
+    name: Release Python
+    needs: release
+    # if: ${{ needs.release.outputs.released }}
+    runs-on: ubuntu-24.04
+    defaults:
+      run:
+        working-directory: ./modules/python
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python for Release
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
+
+      - name: Install
+        run: make init
+          pip install --upgrade pip
+          pip install build twine
+
+      - name: Build Python Distribution
+        run: make build
+
+      - name: Publish to PyPI
+        run: |
+          if [ -z "${PYPI_TOKEN}" ]; then
+            echo "PYPI_TOKEN is not set. Exiting..."
+            exit 1
+          fi
+          twine upload dist/* -u __token__ -p "${PYPI_TOKEN}"
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
 
   attach-assets:
     needs: release
