feat(gemini_openai): added 'gemini_openai' as a provider

--- a/modules/node/package.json
+++ b/modules/node/package.json
@@ -5,15 +5,16 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prebuild": "cp ../../models.yaml .",
+    "updateyaml":"cp ../../models.yaml ./data",
+    "prebuild": "npm run updateyaml",
     "build": "npm run update-models && tsc",
     "build:watch": "npm run update-models && tsc -w",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prepare": "husky",
     "prepublishOnly": "npm run build && npm run lint && npm run test",
-    "start": "ts-node src/demo.ts",
-    "start:debug": "node --inspect-brk node_modules/.bin/ts-node ./src/demo.ts",
+    "start": "npm run updateyaml && ts-node src/demo.ts",
+    "start:debug": "npm run updateyaml && node --inspect-brk node_modules/.bin/ts-node ./src/demo.ts",
     "pretest": "cp ../../models.yaml .",
     "test": "jest --coverage",
     "test:cov": "jest --coverage",
