--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,6 +9,8 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  # Required to publish NPM package to GH NPM.
+  packages: write
 
 env:
   PYTHON_VERSION: "3.10"
