--- a/models.yaml
+++ b/models.yaml
@@ -236,7 +236,8 @@ providers:
           speech_generation: false
           transcription: false
           translation: false
-  gemini:
+
+  gemini: &gemini
     id: gemini
     name: Gemini
     docs: https://ai.google.dev/gemini-api/docs/models
@@ -366,6 +367,16 @@ providers:
           speech_generation: false
           transcription: false
           translation: false
+
+  # Google Gemini with the OpenAI Compatible Base URL.
+  gemini_openai:
+    <<: *gemini
+    id: gemini_openai
+    name: Gemini (OpenAI Compatible)
+    docs: https://ai.google.dev/gemini-api/docs/openai
+    api_specification: api.openai.com/v1
+    base_url: https://generativelanguage.googleapis.com/v1beta/openai/
+
   claude:
     id: claude
     name: Claude
