chore: fix test

--- a/modules/python/src/ai_providers_and_models/data/models.yaml
+++ b/modules/python/src/ai_providers_and_models/data/models.yaml
@@ -371,7 +371,7 @@ providers:
   # Google Gemini with the OpenAI Compatible Base URL.
   gemini_openai:
     <<: *gemini
-    id: gemini_open
+    id: gemini_openai
     name: Gemini (OpenAI Compatible)
     docs: https://ai.google.dev/gemini-api/docs/openai
     api_specification: api.openai.com/v1
