--- a/models.yaml
+++ b/models.yaml
@@ -1,4 +1,4 @@
-version: 0.1.8
+version: 0.1.9 # x-release-please-version
 updated: 2025-03-26T00:00:00.000Z
 source: https://github.com/dwmkerr/ai-providers-and-models
 author: dwmkerr
