--- a/modules/python/makefile
+++ b/modules/python/makefile
@@ -5,7 +5,7 @@ help: # Show help for each of the Makefile recipes.
 	@grep -E '^[a-zA-Z0-9 -]+:.*#'  Makefile | sort | while read -r l; do printf "\033[1;32m$$(echo $$l | cut -f 1 -d':')\033[00m:$$(echo $$l | cut -f 2- -d'#')\n"; done
 
 .PHONY: init
-init: # install dependencies
+init: # install dependencies, get latest models.yaml
 	cp ../../models.yaml ./src/ai_providers_and_models/data
 	python -m pip install --upgrade pip
 	pip install -r requirements-dev.txt
