--- a/models.yaml
+++ b/models.yaml
@@ -30,9 +30,9 @@ providers:
           output_per_million: 10
         modalities:
           text: true
-          image: false
-          audio: false
-          video: false
+          image: true
+          audio: true
+          video: true
         endpoints:
           assistants: true
           batch: false
@@ -71,7 +71,7 @@ providers:
           output_per_million: 150
         modalities:
           text: true
-          image: false
+          image: true
           audio: false
           video: false
         endpoints:
