--- a/modules/python/src/ai_providers_and_models/data/models.yaml
+++ b/modules/python/src/ai_providers_and_models/data/models.yaml
@@ -1,5 +1,5 @@
-version: 0.1.8
-updated: 2025-03-18T00:00:00.000Z
+version: 0.1.9 # x-release-please-version
+updated: 2025-03-26T00:00:00.000Z
 source: https://github.com/dwmkerr/ai-providers-and-models
 author: dwmkerr
 providers:
