--- a/.github/workflows/model-integration-tests.yml
+++ b/.github/workflows/model-integration-tests.yml
@@ -3,21 +3,8 @@ name: "Model Integration Tests"
 # This workflow can be triggered manually or called from other workflows
 on:
   workflow_dispatch:
-    inputs:
-      api_key:
-        description: 'OpenAI API Key (will be stored as a secret)'
-        required: true
-      base_url:
-        description: 'Custom Base URL (optional)'
-        required: false
   # Allow this workflow to be called by other workflows
   workflow_call:
-    inputs:
-      skip:
-        description: 'Skip integration tests (use only in emergency situations)'
-        required: false
-        default: false
-        type: boolean
     secrets:
       OPENAI_API_KEY:
         description: 'OpenAI API Key'
@@ -29,8 +16,6 @@ on:
 jobs:
   integration-test:
     name: Run Model Integration Tests
-    # Skip if explicitly requested
-    if: ${{ inputs.skip != true }}
     runs-on: ubuntu-24.04
     defaults:
       run:
@@ -45,13 +30,13 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies
-        run: |
-          make init
-          pip install openai
+        run: make init
+
+      - name: Lint Code
+        run: make lint
 
       - name: Run Integration Tests
         run: python -m integration_tests.test_openai_models
         env:
-          # Use either workflow_dispatch input or workflow_call secret
-          OPENAI_API_KEY: ${{ github.event_name == 'workflow_dispatch' && inputs.api_key || secrets.OPENAI_API_KEY }}
-          OPENAI_BASE_URL: ${{ github.event_name == 'workflow_dispatch' && inputs.base_url || secrets.OPENAI_BASE_URL }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
