build: simplify build steps

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,12 +5,6 @@ on:
     branches: [main]
   pull_request:
   workflow_dispatch:
-    inputs:
-      skip_integration_tests:
-        description: 'Skip integration tests (emergency override)'
-        required: false
-        default: false
-        type: boolean
 
 permissions:
   contents: write
@@ -50,19 +44,10 @@ jobs:
           manifest-file: .github/release-please-manifest.json
           config-file: .github/release-please-config.json
 
-  # Add integration test job that is required before publishing
-  integration-tests:
-    needs: release
-    # Only run if a release is being created
-    if: ${{ needs.release.outputs.released && !inputs.skip_integration_tests }}
-    uses: ./.github/workflows/model-integration-tests.yml
-
   release-node:
     name: Release Node
-    # Add dependency on integration tests
-    needs: [release, integration-tests]
-    # Allow emergency bypass of integration tests
-    if: ${{ needs.release.outputs.released && (inputs.skip_integration_tests || success() || !needs.integration-tests.result) }}
+    needs: [release]
+    if: ${{ needs.release.outputs.released }}
     runs-on: ubuntu-24.04
     defaults:
       run:
@@ -101,10 +86,8 @@ jobs:
 
   release-python:
     name: Release Python
-    # Add dependency on integration tests
-    needs: [release, integration-tests]
-    # Allow emergency bypass of integration tests
-    if: ${{ needs.release.outputs.released && (inputs.skip_integration_tests || success() || !needs.integration-tests.result) }}
+    needs: [release]
+    if: ${{ needs.release.outputs.released }}
     runs-on: ubuntu-24.04
     defaults:
       run:
