chore: better name for input

--- a/.github/workflows/model-integration-tests.yml
+++ b/.github/workflows/model-integration-tests.yml
@@ -9,7 +9,7 @@ on:
         required: true
         type: string
       base_url:
-        description: 'Custom OpenAI API base URL (optional)'
+        description: 'OpenAI API Base URL (optional)'
         required: false
         type: string
 
