--- a/modules/integration-tests/makefile
+++ b/modules/integration-tests/makefile
@@ -4,7 +4,10 @@ default: help
 help: # Show help for each of the Makefile recipes.
 	@grep -E '^[a-zA-Z0-9 -]+:.*#'  Makefile | sort | while read -r l; do printf "\033[1;32m$$(echo $$l | cut -f 1 -d':')\033[00m:$$(echo $$l | cut -f 2- -d'#')\n"; done
 
-.PHONY: test # Validate modules
-test:
-	./validate-schema/validate.py ../models.yaml ./models-schema.yaml
-	(cd node && npm install && npm run build && npm test)
+.PHONY: init
+init: # install dependencies
+	pip install -r requirements.txt
+
+.PHONY: integration-tests
+integration-tests: # run model integration tests
+	python test_openai_models.py
