--- a/.github/workflows/model-integration-tests.yml
+++ b/.github/workflows/model-integration-tests.yml
@@ -37,7 +37,7 @@ jobs:
         run: make init
 
       - name: Run Integration Tests
-        run: make integration-test
+        run: make integration-tests
         env:
           OPENAI_API_KEY: ${{ inputs.openai_api_key }}
           OPENAI_BASE_URL: ${{ inputs.base_url }}
